[package]
name = "PasswordCardCreator"
version = "0.1.0"
authors = ["Julien <julien.schminke@web.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
rand_chacha = "0.3.1"
png = "0.11.0"
cairo-rs = { version = "0.14.1", features = ["png"] }
